<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/wx_secondary_color"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_190sdp">
    <RelativeLayout
        android:layout_marginBottom="@dimen/control_space_margin_small"
        android:layout_marginLeft="@dimen/control_space_margin_small"
        android:layout_marginRight="@dimen/control_space_margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:id="@+id/zeromotor_TEXT"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/Zero_Motorcycles"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/wx_tag_color"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text=" Rs. 123,000"
                    fontPath="fonts/Montserrat-Bold.otf"
                    android:textSize="@dimen/small_font_height"
                    android:textColor="@color/wx_accent_color"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:layout_gravity="center_vertical"
                    android:id="@+id/proceedForCheckoutBTN"
                    style="@style/DefaultButtonPaint"
                    android:textColor="@drawable/accent_button_paint_textcolor"
                    android:textSize="@dimen/_11sdp"
                    android:text="PROCEED FOR CHECKOUT"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_30sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/control_space_margin_small"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/yourorder_TEXT"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/Your_order"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/wx_accent_color"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <View
                android:visibility="gone"
                android:layout_marginBottom="@dimen/control_space_margin_small"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@color/wx_accent_color"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:gravity="left"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:id="@+id/important_message_TEXT"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/important_message"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/wx_tag_color"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageButton
                        android:id="@+id/addDeviceBTN"
                        android:background="@drawable/right_arrow3"
                        android:layout_gravity="center_vertical"
                        android:layout_width="@dimen/_7sdp"
                        android:layout_height="@dimen/_16sdp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <TextView
                    android:id="@+id/lookup_TEXT"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/Look_up"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/wx_tag_color"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/details"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/Details"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/wx_accent_color"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>